  - Telnet: polling interval property added (Marcus Redeker), dedicated
    telnet log directory and telnet debug logs added (Juha Lindfors, ORCJAVA-328)
  - Date/Time : values updated once per minute instead of once per second
    (Marcus Redeker)
  - UDP : send hex values by prefixing command data with '0x' string.
    Receiving of UDP packets added (Marcus Redeker)
  - TCP : send hex values by prefixing command data with '0x' string
    (Marcus Redeker)
  - Samsung SmartTV : support control of multiple Samsung devices in single
    installation (Ivan Martinez)
  - Touch panel gestures can now be bound to macros in addition to individual
    commands (Eric Bariaux, ORCJAVA-231)
  - Color selection widget is now supported by the controller (Eric Bariaux,
    ORCJAVA-235)
  - Direct Tomcat container logging to /logs/container/tomcat-server.log 
    (Tomcat server logging) and /logs/container/appcontext.log (Controller
    web application logging) files, and output directed to standard output
    and error streams to /logs/container/stderrout.log -- catalina.out is
    no longer created (Juha Lindfors, ORCJAVA-273)
  - Adjusted 'start' and 'run' targets of openremote.sh to configure default
    standard output console logging differently -- 'run' target will still
    output logs to console where as 'start' target will redirect all logging
    to files (Juha Lindfors, ORCJAVA-273)


Bug Fixes:

  - Performance fix to sensor state cache queries (Marcus Redeker)
  - Runtime performance optimization to avoid unnecessary XML 
    parsing/XPath use (ORCJAVA-190)
  - Fix for JSON REST request return values (Richard Turner, ORCJAVA-254)
  - Rework logout requests and added CORS headers (Richard Turner, ORCJAVA-255)
  - Internal API : concurrency and call control on Deployer start 
    controller calls (Juha Lindfors, ORCJAVA-179)  
  - Range and Level sensors trim the incoming values from protocol implementation